--- a/package.json
+++ b/package.json
@@ -1,35 +1,35 @@
 {
-	"name": "portfolio-website",
-	"version": "0.1.0",
-	"private": true,
-	"scripts": {
-		"dev": "next dev",
-		"start": "next start",
-		"lint": "next lint",
-		"build": "CACHE_BUST=1 next build"
-	},
-	"dependencies": {
-		"@fortawesome/fontawesome-svg-core": "^7.1.0",
-		"@fortawesome/free-brands-svg-icons": "^7.1.0",
-		"@fortawesome/free-regular-svg-icons": "^7.1.0",
-		"@fortawesome/free-solid-svg-icons": "^6.7.2",
-		"@fortawesome/react-fontawesome": "^3.1.1",
-		"next": "^15.1.4",
-		"nodemailer": "^7.0.11",
-		"prop-types": "^15.8.1",
-		"react": "^19.2.3",
-		"react-dom": "^19.2.3",
-		"react-toastify": "^11.0.5",
-		"validator": "^13.12.0"
-	},
-	"devDependencies": {
-		"@eslint/eslintrc": "^3",
-		"eslint": "^9",
-		"eslint-config-next": "16.0.10",
-		"postcss": "^8",
-		"tailwindcss": "^3.4.1"
-	},
-	"engines": {
-		"node": "22.x"
-	}
+  "name": "portfolio-website",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "start": "next start",
+    "lint": "next lint",
+    "build": "CACHE_BUST=1 next build"
+  },
+  "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^7.1.0",
+    "@fortawesome/free-brands-svg-icons": "^7.1.0",
+    "@fortawesome/free-regular-svg-icons": "^7.1.0",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^3.1.1",
+    "next": "16.1.0",
+    "nodemailer": "^7.0.11",
+    "prop-types": "^15.8.1",
+    "react": "19.2.3",
+    "react-dom": "19.2.3",
+    "react-toastify": "^11.0.5",
+    "validator": "^13.12.0"
+  },
+  "devDependencies": {
+    "@eslint/eslintrc": "^3",
+    "eslint": "^9",
+    "eslint-config-next": "16.1.0",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1"
+  },
+  "engines": {
+    "node": "22.x"
+  }
 }
